# agentic-ai-andrewng-course

./: M2_UGL_1_claude.ipynb  README.md  pyproject.toml
M2_reflection_chart/: M2_UGL_1_openai.ipynb  README.md  coffee_sales.csv  pyproject.toml
M2_reflection_sql/: M2_UGL_2.ipynb  products.db
M3_tools/: M3_UGL_1.ipynb  reminders.txt  weather_note.txt
M3_tools_email/: M3_UGL_2.ipynb  README.md
M3_tools_email/email_server/: email_models.py  email_service.py  emails.db  llm_service.py
M3_tools_email/email_server/templates/: ui_all.html
utils/: email_tools.py  pyproject.toml  utils.py
