[project]
name = "agenticai"
version = "0.1.0"
description = ""
authors = [
    {name = "Wai Yan Lam",email = "waiyan0304@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "anthropic (>=0.71.0,<0.72.0)",
    "openai (>=2.5.0,<3.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "aisuite (>=0.1.11,<0.2.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "qrcode (>=8.2,<9.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "markdown (>=3.10,<4.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [
    { include = "utils" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
