[project]
name = "agenticai"
version = "0.1.0"
description = ""
authors = [
    {name = "Wai Yan Lam",email = "waiyan0304@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "anthropic (>=0.71.0,<0.72.0)",
    "openai (>=2.5.0,<3.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
